# A-Maze_ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  config_corner.txt  config_large.txt  config_small.txt  mazegen-1.0.0-py3-none-any.whl  output.txt  pyproject.toml  tea.py  to_do.txt
a_maze_ing/: test.txt
a_maze_ing/mazegen/: constants.py  dfs.py  generator.py  loops.py  patterns.py  solver.py  wall.py
a_maze_ing/mazegen.egg-info/: PKG-INFO  SOURCES.txt
mazegen/: config.py  constants.py  dfs.py  directions.py  generator.py  loops.py  patterns.py  renderer.py  solver.py  validation.py  wall.py
